--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 		<link rel="stylesheet" href="https://i.icomoon.io/public/temp/98a00d923f/UntitledProject/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 	</head>
 	<body>
 		<div class="container">
@@ -49,7 +50,8 @@
     						</h3>
   						</div>
   						<div class="panel-body">
-   						Panel content
+  							<div id="results-div">
+  							</div>
   						</div>
 					</div>
 				</div>
